# SmartHome

./: .gitignore  CMakeLists.txt
modules/videocap/: CMakeLists.txt
modules/videocap/demo/: CMakeLists.txt  ReadMe  pushstream.sh
modules/videocap/demo/include/: savevideo.h  thread_pool.h
modules/videocap/demo/onvif/: soapClient.c  stdsoap2.h
modules/videocap/demo/onvifcomm/: onvif_comm.c  onvif_comm.h  onvif_dump.c
modules/videocap/demo/src/: CMakeLists.txt  main.cpp  savevideo.cpp  webcamdata.cpp  webcamdata.h
modules/videocap/demo/test/: savecameradata.c
modules/videocap/include/: videocap.h  webcamdata.h
modules/videocap/onvif/: CMakeLists.txt  soapStub.h  stdsoap2.c  stdsoap2.h
modules/videocap/onvifcomm/: CMakeLists.txt  onvif_dump.h
modules/videocap/src/: CMakeLists.txt  videocap.cpp
src/: CMakeLists.txt  main.cpp
